testdata/invalid/compute_column_invalid_02.lisp
;;error:3:14-15:malformed target columns
(defcolumns (X :i16))
(defcomputedcolumn (Y Z) (+ X 1))